tests/errors/syn_for4.java
public class syn_for4 {
public static void main(String[] args){
for ( ; ; ) 
}
}
}